--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <html>
   <head>
     <title> Document </title>
-   <script src="script.js"> </script>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="styles.css"
+     <title>Link CSS to HTML</title>
+  <script src="script.js"> </script>
+
   </head>
   <body>
-    
+
   </body>
 </html>
